branches/muParserSSE/parser/muParserSSE.h


/** \file 
    \brief This file contains the DLL interface of muparser.
*/

// Basic types
typedef void*  mecParserHandle_t;    // parser handle
typedef char   mecChar_t;            // character type
typedef int    mecBool_t;            // boolean type
typedef int    mecInt_t;             // integer type 
typedef float  mecFloat_t;           // floating point type
 
typedef mecFloat_t (*mecFun1_t)(mecFloat_t);
 
typedef mecFloat_t (*mecFun2_t)(mecFloat_t, mecFloat_t);
 
typedef mecFloat_t (*mecFun3_t)(mecFloat_t, mecFloat_t, mecFloat_t);
 
typedef mecFloat_t (*mecFun4_t)(mecFloat_t, mecFloat_t, mecFloat_t, mecFloat_t);
 
typedef mecFloat_t (*mecFun5_t)(mecFloat_t, mecFloat_t, mecFloat_t, mecFloat_t, mecFloat_t);
 

// Functions for parser management
typedef void        (*mecErrorHandler_t)(mecParserHandle_t a_hParser);             // [optional] callback to an error handler
typedef mecFloat_t  (*mecEvalFun_t)();
typedef mecInt_t    (*mecIdentFun_t)(const mecChar_t*, mecInt_t*, mecFloat_t*); // [optional] value identification callbacks

API_EXPORT(mecParserHandle_t) mecCreate();

API_EXPORT(mecEvalFun_t) mecCompile(mecParserHandle_t a_hParser);

API_EXPORT(void) mecRelease(mecParserHandle_t a_hParser);

API_EXPORT(const mecChar_t*) mecGetExpr(mecParserHandle_t a_hParser);

API_EXPORT(void) mecSetExpr(mecParserHandle_t a_hParser, const mecChar_t *a_szExpr);

//API_EXPORT(void) mecSetVarFactory(mecParserHandle_t a_hParser, mecFacFun_t a_pFactory, void* pUserData);
API_EXPORT(const mecChar_t*) mecGetVersion(mecParserHandle_t a_hParser);

API_EXPORT(void) mecDefineFun1(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun1_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun2(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun2_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun3(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun3_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun4(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun4_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun5(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun6(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun7(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun8(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun9(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);

API_EXPORT(void) mecDefineFun10(mecParserHandle_t a_hParser, const mecChar_t *a_szName, mecFun5_t a_pFun, mecBool_t a_bOptimize);


API_EXPORT(void) mecDefineOprt( mecParserHandle_t a_hParser, 
                                const mecChar_t* a_szName, 
                                mecFun2_t a_pFun, 
                                mecInt_t a_nPrec, 
                                mecInt_t a_nOprtAsct,
                                mecBool_t a_bOptimize);


API_EXPORT(void) mecDefineConst( mecParserHandle_t a_hParser, 
                                 const mecChar_t* a_szName, 
                                 mecFloat_t a_fVal );


API_EXPORT(void) mecDefineVar( mecParserHandle_t a_hParser, 
                               const mecChar_t* a_szName, 
                               mecFloat_t *a_fVar);


API_EXPORT(void) mecDefinePostfixOprt( mecParserHandle_t a_hParser, 
                                       const mecChar_t* a_szName, 
                                       mecFun1_t a_pOprt, 
                                       mecBool_t a_bOptimize);



API_EXPORT(void) mecDefineInfixOprt( mecParserHandle_t a_hParser, 
                                     const mecChar_t* a_szName, 
                                     mecFun1_t a_pOprt, 
                                     mecBool_t a_bOptimize);


// Define character sets for identifiers
API_EXPORT(void) mecDefineNameChars(mecParserHandle_t a_hParser, const mecChar_t* a_szCharset);

API_EXPORT(void) mecDefineOprtChars(mecParserHandle_t a_hParser, const mecChar_t* a_szCharset);

API_EXPORT(void) mecDefineInfixOprtChars(mecParserHandle_t a_hParser, const mecChar_t* a_szCharset);


// Remove all / single variables
API_EXPORT(void) mecRemoveVar(mecParserHandle_t a_hParser, const mecChar_t* a_szName);

API_EXPORT(void) mecClearVar(mecParserHandle_t a_hParser);

API_EXPORT(void) mecClearConst(mecParserHandle_t a_hParser);

API_EXPORT(void) mecClearOprt(mecParserHandle_t a_hParser);

API_EXPORT(void) mecClearFun(mecParserHandle_t a_hParser);


// Querying variables / expression variables / constants
API_EXPORT(int)  mecGetExprVarNum(mecParserHandle_t a_hParser);

API_EXPORT(int)  mecGetVarNum(mecParserHandle_t a_hParser);

API_EXPORT(int)  mecGetConstNum(mecParserHandle_t a_hParser);

API_EXPORT(void) mecGetExprVar(mecParserHandle_t a_hParser, unsigned a_iVar, const mecChar_t** a_pszName, mecFloat_t** a_pVar);

API_EXPORT(void) mecGetVar(mecParserHandle_t a_hParser, unsigned a_iVar, const mecChar_t** a_pszName, mecFloat_t** a_pVar);

API_EXPORT(void) mecGetConst(mecParserHandle_t a_hParser, unsigned a_iVar, const mecChar_t** a_pszName, mecFloat_t* a_pVar);

API_EXPORT(void) mecSetArgSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);

API_EXPORT(void) mecSetDecSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);

API_EXPORT(void) mecSetThousandsSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);

API_EXPORT(void) mecResetLocale(mecParserHandle_t a_hParser);


// Add value recognition callbacks
API_EXPORT(void) mecAddValIdent(mecParserHandle_t a_hParser, mecIdentFun_t);

API_EXPORT(void) mecSetErrorHandler(mecParserHandle_t a_hParser, mecErrorHandler_t a_pErrHandler);