branches/muParserSSE/example_csharp/muParser.cs


      public void DefineFun(string name, Fun8Delegate function, bool bAllowOptimization)
      {
        m_funDelegates.Add(function);
        mecDefineFun8(m_parser, name, function, (bAllowOptimization) ? 1 : 0);
      }

      public void DefineFun(string name, Fun9Delegate function, bool bAllowOptimization)
      {
        m_funDelegates.Add(function);
        mecDefineFun9(m_parser, name, function, (bAllowOptimization) ? 1 : 0);
      }

      public void DefineFun(string name, Fun10Delegate function, bool bAllowOptimization)
      {
        m_funDelegates.Add(function);
        mecDefineFun10(m_parser, name, function, (bAllowOptimization) ? 1 : 0);
      }
      
      public void DefineOprt(string name, Fun2Delegate function, int precedence)
      {
        m_binOprtDelegates.Add(function);
        mecDefineOprt(m_parser, name, function, precedence, 0);
      }

      public void DefinePostfixOprt(string name, Fun1Delegate oprt)
      {
        m_binOprtDelegates.Add(oprt);
        mecDefinePostfixOprt(m_parser, name, oprt, 0);    
      }

      public void DefineInfixOprt(string name, Fun1Delegate oprt, EPrec precedence)
      {
        m_binOprtDelegates.Add(oprt);
        mecDefineInfixOprt(m_parser, name, oprt, 0);    
      }

      public Dictionary<string, float> GetConst()
      {
        int num = mecGetConstNum(m_parser);

        Dictionary<string, float> map = new Dictionary<string, float>();
        for (int i = 0; i < num; ++i)
        {
          string name = "";
          float value = 0;
          mecGetConst(m_parser, i, ref name, ref value);

          map[name] = value;
        }

        return map;
      }

      public Dictionary<string, ParserVariable> GetVar()
      {
        return m_varBuf;
      }

      public Dictionary<string, IntPtr> GetExprVar()
      {
        int num = mecGetExprVarNum(m_parser);

        Dictionary<string, IntPtr> map = new Dictionary<string, IntPtr>();
        for (int i = 0; i < num; ++i)
        {
          string name = "";
          IntPtr ptr = IntPtr.Zero;
          mecGetExprVar(m_parser, i, ref name, ref ptr);

          map[name] = ptr;
        }

        return map;
      }

      public void SetArgSep(char cArgSep)
      {
        mecSetArgSep(m_parser, Convert.ToByte(cArgSep));  
      }

      public void SetDecSep(char cDecSep)
      {
        mecSetDecSep(m_parser, Convert.ToByte(cDecSep));
      }

      public void SetThousandsSep(char cThSep)
      {
        mecSetThousandsSep(m_parser, Convert.ToByte(cThSep));
      }

      public void ResetLocale()
      {
        mecResetLocale(m_parser);
      }
      #endregion


      #region DLL function bindings

      //----------------------------------------------------------
      // Basic operations / initialization  
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention=CallingConvention.Cdecl)]
      protected static extern IntPtr mecCreate();

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern  CompiledFunDelegate mecCompile(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention=CallingConvention.Cdecl)]
      protected static extern void mecRelease(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecResetLocale(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern string mecGetVersion(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern string mecGetExpr(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecSetExpr(IntPtr a_pParser, string a_szExpr);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecSetErrorHandler(IntPtr a_pParser, ErrorDelegate errFun);

      //---------------------------------------------------------------------------
      // Non numeric callbacks
      //---------------------------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecAddValIdent(IntPtr a_parser, IdentFunDelegate fun);

      //----------------------------------------------------------
      // Defining variables and constants
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineConst(IntPtr a_pParser, 
                                                  string a_szName,
                                                  float a_fVal);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineStrConst(IntPtr parser, 
                                                      string name, 
                                                      string val );

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineVar(IntPtr parser, 
                                                 string name,
                                                 IntPtr var );

      //----------------------------------------------------------
      // Querying variables / expression variables / constants
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecGetExprVarNum(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecGetExprVar(IntPtr a_parser,
                                                 int idx,
                                                 ref string name,
                                                 ref IntPtr ptr);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecGetVarNum(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecGetVar(IntPtr a_parser,
                                             int idx,
                                             ref string name,
                                             ref IntPtr ptr);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecGetConstNum(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecGetConst(IntPtr a_parser, 
                                                int idx, 
                                                ref string str,
                                                ref float value);

      //----------------------------------------------------------
      // Remove all / single variables
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecRemoveVar(IntPtr a_parser, string name);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecClearVar(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecClearConst(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecClearOprt(IntPtr a_parser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecClearFun(IntPtr a_parser);

      //----------------------------------------------------------
      // Define character sets for identifiers
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineNameChars(IntPtr a_parser, string charset);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineOprtChars(IntPtr a_parser, string charset);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineInfixOprtChars(IntPtr a_parser, string charset);

      //----------------------------------------------------------
      // Defining callbacks / variables / constants
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun1(IntPtr a_parser, string name, Fun1Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun2(IntPtr a_parser, string name, Fun2Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun3(IntPtr a_parser, string name, Fun3Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun4(IntPtr a_parser, string name, Fun4Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun5(IntPtr a_parser, string name, Fun5Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun6(IntPtr a_parser, string name, Fun6Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun7(IntPtr a_parser, string name, Fun7Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun8(IntPtr a_parser, string name, Fun8Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun9(IntPtr a_parser, string name, Fun9Delegate fun, int optimize);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineFun10(IntPtr a_parser, string name, Fun10Delegate fun, int optimize);

      //----------------------------------------------------------
      // Operator definitions
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineOprt(IntPtr a_pParser, 
                                                 string name, 
                                                 Fun2Delegate fun, 
                                                 int precedence, 
                                                 int optimize);
